--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -62,6 +62,10 @@
     {% for id in ids %}
         <div id="{{id}}"></div>
     {% endfor %}
+
+    {% for id_c in ids_counts %}
+        <div id="{{id_c}}"></div>
+    {% endfor %}
 </div>
 
 <script type="text/javascript">
@@ -73,8 +77,8 @@
 </script>
 
 <script type="text/javascript">
-    const graphs = {{graphJSON_counts | safe}};
-    const ids = {{ids_counts | safe}};
+    const graphs_counts = {{graphJSON_counts | safe}};
+    const ids_counts = {{ids_counts | safe}};
     for(let i in graphs_counts) {
         Plotly.plot(ids[i], graphs_counts[i].data, graphs_counts[i].layout);
     }
