--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -68,6 +68,22 @@
     {% endfor %}
 </div>
 
+<div class="container1">
+    {% block content %}
+        <div class="page-header">
+            <h1 class="text-center">Overview of Categories</h1>
+        </div>
+    {% endblock %}
+
+    {% for id in ids %}
+        <div id_counts="{{id_counts}}"></div>
+    {% endfor %}
+
+    {% for id_c in ids_counts %}
+        <div id_counts="{{id_counts}}"></div>
+    {% endfor %}
+</div>
+
 <script type="text/javascript">
     const graphs = {{graphJSON | safe}};
     const ids = {{ids | safe}};
