--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -69,13 +69,13 @@
 </div>
 
 <div class="container1">
-    {% block content %}
+    {% block content1 %}
         <div class="page-header">
             <h1 class="text-center">Overview of Categories</h1>
         </div>
     {% endblock %}
 
-    {% for id in ids %}
+    {% for id in ids_counts %}
         <div id_counts="{{id_counts}}"></div>
     {% endfor %}
 
