--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -76,11 +76,11 @@
     {% endblock %}
 
     {% for id_c in ids_counts %}
-        <div id="{{id_c}}"></div>
+        <div id_c="{{id_c}}"></div>
     {% endfor %}
 
     {% for id_c in ids_counts %}
-        <div id="{{id_c}}"></div>
+        <div id_c="{{id_c}}"></div>
     {% endfor %}
 </div>
 
